--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 </div>
 
                 <div class="home__scroll">
-                    <a href="#about" class="home__scroll-button button--flex">
+                    <a href="#skills" class="home__scroll-button button--flex">
                         <i class='bx bx-mouse-alt home__scroll-mouse'></i>
                         <span class="home__scroll-name">Scroll down</span>
                             <i class='bx bx-down-arrow-alt home__scroll-arrow'></i>
